--- a/view/style/register_sale.css
+++ b/view/style/register_sale.css
@@ -2,7 +2,14 @@
     [id^='itemDescription'] {min-width: 411px !important;}
     #submitBtn, #resetBtn{min-width:200px;text-transform:uppercase;font-weight:600;}
 }
-    
+
+#costumerRegistry::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
+}
+
 #saleFormContent{
     border-radius: 20px;
     border: 1px solid #fff;
